# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

23-Aug-2010 Ian MacLennan
 # [#21251] Hathor RTL CSS fixes
 # [#21449] Add ACL Create, Edit, & Edit State checks to Menu Manager
 # [#21540] pre-check=0, post-check=0 should not be added to Cache-Control HTTP header
 # [#21561] Display/Function of ordering arrows when sorted in descending order

23-Aug-2010 Mark Dexter
 # Sample Data fixes (Elin Waring)

23-Aug-2010 Andrew Eddie
 # Fixed issue [#21721] ACL settings not working on language manager (Sander Potjer, Michael Babker).

22-Aug-2010 Mark Dexter
 # [#22005] Regression on categories ordering (broken with #21980)
 # [#21441] Error ordering items 

22-Aug-2010 Ian MacLennan
 # [#21980] Clean up ACL back end for people with create and not edit and edit and not create

22-Aug-2010 Jean-Marie Simonet
 # [#21659] Beez 2 template (default) restless. Thanks Rouven
 $ [#21973] Inconsistant labels for dropdown lists in Template Manager. Normalizing string. Creating new JGlobal
 # [#21981] Add ability to display all modules for both site and admin to Module Manager. Thanks Michael
 $ [#21984] Template Manager: Templates Language String Fix. Thanks Michael.
 # [#21989] Filters - correct position. Thanks Bill.
 # [#21983] Reverse filter order in Template Manager: Styles on Hathor Template. Thanks Michael. 
 $ Normalizing some string.
 # [#21941] Full Path Disclosure. Thanks all.
 
21-Aug-2010 Ian MacLennan
 # [#21949] Systematic elimination of DS as directory separator

21-Aug-2010 Jean-Marie Simonet
 # [#21964] Help menu item visible in edit mode if hidden in module settings. Thanks Sander and Bill.
 # [#21921] coding remnant left in module.php. Thanks Troy.
 # [#21915] SEF URL Defaults. Thanks Amy.
 # [#21861] Incorrect plural of "suffix" in method names. Thanks Chris.
 # [#21737] Password reset tokens stored plaintext in the database. Thanks Ian.
 # [#21971] Backend Cache Settings Tooltip Typo. Thanks Rouven.